syntax = "proto3";

package modes3.protobuf;
option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;


message ComputerVisionObjectPositions{
	map<string , PhysicalObject> physicalObjects = 1;
	int64 timestamp 			 = 2;
	int64 frameindex 			 = 3;
}

message PhysicalObject{
	string name = 1;
	map<string , Marker> markers = 2;
}

message Marker{
	string name = 1;
	ThreeDPosition realposition = 2;
	repeated TwoDPosition screenPositions = 3;
	repeated bool tracked = 4;
}

message ThreeDPosition{
	double x = 1;
	double y = 2;
	double z = 3;
}

message TwoDPosition{
	double x = 1;
	double y = 2;
}